--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,14 @@
 .env
 docker/mysql/data/
 /src/storage
-!/src/storage/app/public/images
-!/src/storage/app/public/products
+/src/storage/framework/cache/*
+!/src/storage/framework/cache/.gitkeep
+
+/src/storage/framework/sessions/*
+!/src/storage/framework/sessions/.gitkeep
+
+/src/storage/framework/views/*
+!/src/storage/framework/views/.gitkeep
+
+/src/storage/logs/*
+!/src/storage/logs/.gitkeep
